--- a/sass/scratchx.scss
+++ b/sass/scratchx.scss
@@ -191,6 +191,7 @@ body > main > header {
     @include row();
     height: $vertical-base * 10;
     line-height: $vertical-base * 10;
+    position: relative;
 }
 
 body > main > article {
@@ -200,6 +201,7 @@ body > main > article {
 
 .scratchx-logo {
     float: left;
+    margin-bottom: 0;
 
     span {
         @include hide-text;
