--- a/sass/base/_variables.scss
+++ b/sass/base/_variables.scss
@@ -24,6 +24,7 @@ $base-z-index: 0;
 $white: #fff;
 $blue: #21b4f0;
 $bright-blue: #24a3ec;
+$bright-blue-dark-bg: #4ABFF9;
 $light-blue: #d7e5f3;
 $dark-blue: #3f5975;
 $dark-gray: #58595b;
