--- a/sass/_home.scss
+++ b/sass/_home.scss
@@ -16,8 +16,8 @@ body.page-home > main > header {
     padding-top: 0;
 
     > header {
-        background: url(../images/editor.png);
-        background-size: cover;
+        background-image: linear-gradient(to bottom, rgba($dark-blue, 0) 67%, rgba($dark-blue, 1) 33%), url(../images/editor.png);
+        background-size: cover, cover;
         padding-top: $vertical-base * 10;
 
         h1 {
@@ -91,6 +91,14 @@ body.page-home > main > header {
                     @include icon(before, gears) {
                         font-size: 1.5 * $base-font-size;
                         padding-right: $vertical-base;
+                    }
+
+                    a {
+                        color: $bright-blue-dark-bg;
+
+                        &:hover {
+                            color: $white;
+                        }
                     }
                 }
 
