Fix dialog sizes

--- a/css/scratchx.css
+++ b/css/scratchx.css
@@ -741,7 +741,9 @@ picture {
   transition: opacity 0.25s ease;
   border-radius: 5px;
   padding: 1.5em;
-  position: relative; }
+  position: relative;
+  display: table;
+  margin: auto; }
   .modal .modal-inner a.cta {
     color: white;
     display: inline-block;
@@ -772,8 +774,7 @@ dialog {
   dialog section {
     background-color: #3f5975;
     color: #fff;
-    /* Kill margin collapse */
-    padding: 1px; }
+    padding: 0.75em; }
   dialog section:last-child {
     background-color: #fff;
     padding: 0.75em;
@@ -1016,31 +1017,12 @@ body > section {
 body #home {
   display: block; }
 
-.modal.n-children-1 dialog {
-  width: 100%; }
-.modal.n-children-1 .modal-inner {
-  max-width: 25%;
-  margin-left: auto;
-  margin-right: auto; }
-  .modal.n-children-1 .modal-inner::after {
-    clear: both;
-    content: "";
-    display: table; }
-.modal.n-children-2 dialog {
+.modal dialog {
+  width: 25em;
   float: left;
-  display: block;
-  margin-right: 2.53165%;
-  width: 48.73418%; }
-  .modal.n-children-2 dialog:last-child {
-    margin-right: 0; }
-.modal.n-children-2 .modal-inner {
-  max-width: 50%;
-  margin-left: auto;
-  margin-right: auto; }
-  .modal.n-children-2 .modal-inner::after {
-    clear: both;
-    content: "";
-    display: table; }
+  margin-right: 12px; }
+  .modal dialog:last-child {
+    margin-right: auto; }
 
 .extension-file section:first-child {
   /* Add a border equal to the number of featured extensions - 1 */
